[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "beanPy"
author = "Aeron Wheel, Oliver Dawson, Gregory Dyer, Connor Porter"
author-email = "WheelA@cardiff.ac.uk"
requires = [
    "numpy >=1.21.0",
    "sympy >=1.11.1",
    "matplotlib >= 3.6.1",
]
requires-python= ">=3.8"
description-file = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License",]

[tool.flit.metadata.requires-extra]
doc = ["sphinx", "myst-parser, "sphinx-rtd-theme", "sphinx-togglebutton", "matplotlib", "sphinxcontrib.mermaid"]
